# Logistic-Regression

./: CMakeLists.txt  Makefile  README.md  main.c
numerical/: matrix.c  matrix.h
preprocessing/: load.c  load.h  scaler.c  scaler.h  split.c  split.h
regression/: logistic.c  logistic.h
util/: numc.c  numc.h  printer.c  printer.h
